force-app/main/default/objects/Account/fields/Acepta_Mail__c.field-meta.xml
<CustomField>
    <fullName>Acepta_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta Mail</label>
    <type>Checkbox</type>
</CustomField>