force-app/main/default/objects/Account/fields/Acepta_Tel_fono__c.field-meta.xml
<CustomField>
    <fullName>Acepta_Tel_fono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta Teléfono</label>
    <type>Checkbox</type>
</CustomField>