force-app/main/default/objects/Account/fields/Acepta_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Acepta_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta Whatsapp</label>
    <type>Checkbox</type>
</CustomField>