force-app/main/default/objects/Account/fields/Agente_Percepcion_Retencion__c.field-meta.xml
<CustomField>
    <fullName>Agente_Percepcion_Retencion__c</fullName>
    <label>Agente Percepción/Retención</label>
    <length>80</length>
    <type>Text</type>
</CustomField>