force-app/main/default/objects/Account/fields/Alta_CUIT__c.field-meta.xml
<CustomField>
    <fullName>Alta_CUIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta CUIT</label>
    <type>Checkbox</type>
</CustomField>