force-app/main/default/objects/Account/fields/CBU__c.field-meta.xml
<CustomField>
    <fullName>CBU__c</fullName>
    <inlineHelpText>Cbu de la cuenta.</inlineHelpText>
    <label>CBU</label>
    <length>22</length>
    <type>Text</type>
</CustomField>