force-app/main/default/objects/Account/fields/Clave_area_cliente__c.field-meta.xml
<CustomField>
    <fullName>Clave_area_cliente__c</fullName>
    <label>Clave area cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>