force-app/main/default/objects/Account/fields/Comercializador__c.field-meta.xml
<CustomField>
    <fullName>Comercializador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comercializador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comercializadora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>