force-app/main/default/objects/Account/fields/Condicion_de_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_IVA__c</fullName>
    <label>Condición de IVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsable Inscripto</fullName>
                <default>true</default>
                <label>Responsable Inscripto</label>
            </value>
            <value>
                <fullName>Responsable No Inscripto</fullName>
            </value>
            <value>
                <fullName>Monotributista</fullName>
            </value>
            <value>
                <fullName>Exento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>