force-app/main/default/objects/Account/fields/Condicion_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_Pago__c</fullName>
    <label>Condición de Pago</label>
    <length>80</length>
    <type>Text</type>
</CustomField>