force-app/main/default/objects/Account/fields/Constructora__c.field-meta.xml
<CustomField>
    <fullName>Constructora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constructora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas (Constructora)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>