force-app/main/default/objects/Account/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <inlineHelpText>Ingresar respetando separadores</inlineHelpText>
    <label>CUIT / DNI</label>
    <length>13</length>
    <type>Text</type>
</CustomField>