force-app/main/default/objects/Account/fields/Dias_Consulta_Pago__c.field-meta.xml
<CustomField>
    <fullName>Dias_Consulta_Pago__c</fullName>
    <label>Dias Consulta Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>