force-app/main/default/objects/Account/fields/Estatuto_y_Copia_Certificada__c.field-meta.xml
<CustomField>
    <fullName>Estatuto_y_Copia_Certificada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estatuto y Copia Certificada</label>
    <type>Checkbox</type>
</CustomField>