force-app/main/default/objects/Account/fields/Fecha_control_contra_boleto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_control_contra_boleto__c</fullName>
    <label>Fecha control contra boleto</label>
    <type>Date</type>
</CustomField>