force-app/main/default/objects/Account/fields/Fecha_de_constitucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_constitucion__c</fullName>
    <label>Fecha de constitucion</label>
    <type>Date</type>
</CustomField>