force-app/main/default/objects/Account/fields/Libro_de_Accionistas_Solo_S_A__c.field-meta.xml
<CustomField>
    <fullName>Libro_de_Accionistas_Solo_S_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro de Accionistas (Solo S.A.)</label>
    <type>Checkbox</type>
</CustomField>