force-app/main/default/objects/Account/fields/Libro_de_Actas_de_Directorio_Libro_de__c.field-meta.xml
<CustomField>
    <fullName>Libro_de_Actas_de_Directorio_Libro_de__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro de Actas de Directorio / Libro de</label>
    <type>Checkbox</type>
</CustomField>