force-app/main/default/objects/Account/fields/Libro_de_Compras__c.field-meta.xml
<CustomField>
    <fullName>Libro_de_Compras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro de Compras</label>
    <type>Checkbox</type>
</CustomField>