force-app/main/default/objects/Account/fields/Libro_de_Deposito_y_de_Asistencia__c.field-meta.xml
<CustomField>
    <fullName>Libro_de_Deposito_y_de_Asistencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro de Deposito y de Asistencia</label>
    <type>Checkbox</type>
</CustomField>