force-app/main/default/objects/Account/fields/Libro_de_Inventario_Balance__c.field-meta.xml
<CustomField>
    <fullName>Libro_de_Inventario_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro de Inventario Balance</label>
    <type>Checkbox</type>
</CustomField>