force-app/main/default/objects/Account/fields/Libro_Diario_Operaciones__c.field-meta.xml
<CustomField>
    <fullName>Libro_Diario_Operaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libro Diario (Operaciones)</label>
    <type>Checkbox</type>
</CustomField>