force-app/main/default/objects/Account/fields/Nombre_de_fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_fantasia__c</fullName>
    <label>Nombre de fantasía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>