force-app/main/default/objects/Account/fields/Observaciones_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_carga__c</fullName>
    <label>Observaciones de carga</label>
    <type>TextArea</type>
</CustomField>