force-app/main/default/objects/Account/fields/Poderes_y_Copia_Certificada__c.field-meta.xml
<CustomField>
    <fullName>Poderes_y_Copia_Certificada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poderes y Copia Certificada</label>
    <type>Checkbox</type>
</CustomField>