force-app/main/default/objects/Account/fields/Procedimiento_FC_PG__c.field-meta.xml
<CustomField>
    <fullName>Procedimiento_FC_PG__c</fullName>
    <label>Procedimiento FC/PG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>