force-app/main/default/objects/Account/fields/Referente_administracion__c.field-meta.xml
<CustomField>
    <fullName>Referente_administracion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente administracion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>