force-app/main/default/objects/Account/fields/Tipo_de_propietario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_propietario__c</fullName>
    <label>Tipo de propietario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Unidad</fullName>
            </value>
            <value>
                <fullName>Mixto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>