force-app/main/default/objects/Account/recordTypes/Comercializadora.recordType-meta.xml
<RecordType>
    <fullName>Comercializadora</fullName>
    <active>true</active>
    <label>Comercializadora</label>
</RecordType>