force-app/main/default/objects/Account/recordTypes/Constructora.recordType-meta.xml
<RecordType>
    <fullName>Constructora</fullName>
    <active>true</active>
    <label>Constructora</label>
</RecordType>