force-app/main/default/objects/Account/recordTypes/Propietario.recordType-meta.xml
<RecordType>
    <fullName>Propietario</fullName>
    <active>true</active>
    <label>Propietario</label>
</RecordType>