force-app/main/default/objects/Account/recordTypes/Sociedad_desarrolladora.recordType-meta.xml
<RecordType>
    <fullName>Sociedad_desarrolladora</fullName>
    <active>true</active>
    <label>Sociedad desarrolladora</label>
</RecordType>