force-app/main/default/objects/Account/recordTypes/Vecino.recordType-meta.xml
<RecordType>
    <fullName>Vecino</fullName>
    <active>true</active>
    <label>Vecino</label>
</RecordType>