force-app/main/default/objects/Account/validationRules/CBU_solo_numeros.validationRule-meta.xml
<ValidationRule>
    <fullName>CBU_solo_numeros</fullName>
    <active>true</active>
    <errorConditionFormula>if( RecordType.Name = &#39;Proveedor&#39;, 
NOT(REGEX(CBU__c, &quot;[0-9]{22}&quot;)), false)</errorConditionFormula>
    <errorDisplayField>CBU__c</errorDisplayField>
    <errorMessage>El cbu debe contener solo numeros y tener 22 digitos</errorMessage>
</ValidationRule>